## Droppy 4.3.4 — Settings Polish

### 🔧 Fixes
- **GIF previews**: Reverted to original styling with white gradient border and 200px height